<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="pizzastore" customModuleProvider="target">
            <connections>
                <outlet property="emailTextField" destination="o6T-by-7cv" id="gWJ-mQ-2dp"/>
                <outlet property="nameTextField" destination="hBG-jh-HS9" id="fhe-7G-tkt"/>
                <outlet property="passwordTextField" destination="Dr1-be-14q" id="uf7-XI-gmh"/>
                <outlet property="signInButton" destination="I1d-sJ-kQZ" id="Zmb-GI-zMB"/>
                <outlet property="statusSegmentedControl" destination="RXq-4a-pbE" id="wbE-eL-awu"/>
                <outlet property="view" destination="atK-Qf-ebF" id="A6O-X7-i2O"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="atK-Qf-ebF">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <subviews>
                <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hBG-jh-HS9">
                    <rect key="frame" x="87.5" y="191" width="200" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="nameTextField"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="200" id="r6X-4n-Q3p"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                    <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="next" textContentType="name"/>
                </textField>
                <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contraseña" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Dr1-be-14q">
                    <rect key="frame" x="87.5" y="299" width="200" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="200" id="tTM-46-kFc"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                    <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                </textField>
                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RXq-4a-pbE">
                    <rect key="frame" x="83" y="363" width="209" height="32"/>
                    <segments>
                        <segment title="Para mi"/>
                        <segment title="Para nosotros"/>
                    </segments>
                </segmentedControl>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I1d-sJ-kQZ" customClass="RoundedButton" customModule="pizzastore" customModuleProvider="target">
                    <rect key="frame" x="87.5" y="434" width="200" height="60"/>
                    <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                    <constraints>
                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="CLZ-ui-duX"/>
                        <constraint firstAttribute="width" constant="200" id="KwB-XF-Gcl"/>
                        <constraint firstAttribute="width" secondItem="I1d-sJ-kQZ" secondAttribute="height" multiplier="10:3" id="Oto-lD-oGb"/>
                    </constraints>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="Realizar pedido"/>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <action selector="signInPressedAction:" destination="-1" eventType="touchUpInside" id="UM3-Xq-HtN"/>
                    </connections>
                </button>
                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="VKB-XE-p3J">
                    <rect key="frame" x="80" y="10" width="215" height="161"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="161" id="BSU-da-HCe"/>
                    </constraints>
                </imageView>
                <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="o6T-by-7cv">
                    <rect key="frame" x="87.5" y="245" width="200" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="200" id="MnZ-J0-tXG"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                    <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next" textContentType="email"/>
                </textField>
            </subviews>
            <viewLayoutGuide key="safeArea" id="3hl-J8-dun"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <constraints>
                <constraint firstItem="hBG-jh-HS9" firstAttribute="top" secondItem="VKB-XE-p3J" secondAttribute="bottom" constant="20" id="0w5-RH-ZtS"/>
                <constraint firstItem="RXq-4a-pbE" firstAttribute="centerX" secondItem="atK-Qf-ebF" secondAttribute="centerX" id="4X4-Cx-0rp"/>
                <constraint firstItem="I1d-sJ-kQZ" firstAttribute="top" secondItem="RXq-4a-pbE" secondAttribute="bottom" constant="40" id="5nY-97-vVu"/>
                <constraint firstItem="o6T-by-7cv" firstAttribute="top" secondItem="hBG-jh-HS9" secondAttribute="bottom" constant="20" id="609-J6-Pmk"/>
                <constraint firstItem="hBG-jh-HS9" firstAttribute="centerX" secondItem="atK-Qf-ebF" secondAttribute="centerX" id="FpV-Am-xdq"/>
                <constraint firstItem="3hl-J8-dun" firstAttribute="trailing" secondItem="VKB-XE-p3J" secondAttribute="trailing" constant="80" id="NRN-jO-SQQ"/>
                <constraint firstItem="I1d-sJ-kQZ" firstAttribute="centerX" secondItem="atK-Qf-ebF" secondAttribute="centerX" id="OYo-bU-Lxh"/>
                <constraint firstItem="VKB-XE-p3J" firstAttribute="centerX" secondItem="atK-Qf-ebF" secondAttribute="centerX" id="ZqZ-Hu-cyp"/>
                <constraint firstItem="VKB-XE-p3J" firstAttribute="top" secondItem="3hl-J8-dun" secondAttribute="top" constant="10" id="bVu-2Y-zBd"/>
                <constraint firstItem="VKB-XE-p3J" firstAttribute="leading" secondItem="3hl-J8-dun" secondAttribute="leading" constant="80" id="iCQ-tg-UTG"/>
                <constraint firstItem="Dr1-be-14q" firstAttribute="top" secondItem="o6T-by-7cv" secondAttribute="bottom" constant="20" id="lOM-Wq-qHc"/>
                <constraint firstItem="o6T-by-7cv" firstAttribute="centerX" secondItem="atK-Qf-ebF" secondAttribute="centerX" id="lnB-eI-TbQ"/>
                <constraint firstItem="RXq-4a-pbE" firstAttribute="top" secondItem="Dr1-be-14q" secondAttribute="bottom" constant="30" id="oNz-R1-xBB"/>
                <constraint firstItem="Dr1-be-14q" firstAttribute="centerX" secondItem="atK-Qf-ebF" secondAttribute="centerX" id="ykq-Ei-c6l"/>
            </constraints>
            <point key="canvasLocation" x="65.625" y="1.25"/>
        </view>
    </objects>
    <designables>
        <designable name="I1d-sJ-kQZ">
            <size key="intrinsicContentSize" width="130" height="34"/>
        </designable>
    </designables>
    <resources>
        <image name="icon" width="333" height="333"/>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
