...
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PizzaDetailViewController" customModule="pizzastore" customModuleProvider="target">
            <connections>
                <outlet property="continueButton" destination="73C-z9-aTH" id="Tgh-s8-emz"/>
                <outlet property="descriptionLabel" destination="hyG-ii-YbI" id="Kib-4M-7BL"/>
                <outlet property="headerImageView" destination="YmG-yc-Kyo" id="fZ5-fa-iXw"/>
                <outlet property="segmentedControl" destination="cHj-j6-r17" id="4Go-If-OxI"/>
                <outlet property="titleLabel" destination="O0w-O9-veC" id="hyk-NI-c86"/>
                <outlet property="view" destination="iN0-l3-epB" id="nvd-Bq-4S0"/>
            </connections>
...
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="73C-z9-aTH" customClass="RoundedButton" customModule="pizzastore" customModuleProvider="target">
                    <rect key="frame" x="107" y="656" width="200" height="60"/>
                    <accessibility key="accessibilityConfiguration" identifier="finalizeOrderButton"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="60" id="VLu-vm-SQ7"/>
                        <constraint firstAttribute="width" constant="200" id="a8w-nl-4Vw"/>
                    </constraints>
                    <state key="normal" title="Finalizar Pedido">
                        <color key="titleColor" systemColor="labelColor"/>
...
