...
        showLoadingAnnimation()
        presenter?.loadPizzas()

    }
    
    func addLogoutButton() {
        let logoutButton = UIBarButtonItem(image: UIImage(named: "logout"), style: .plain, target: self, action: #selector(logoutAction))
        logoutButton.tintColor = UIColor.black
        logoutButton.isAccessibilityElement = true
        logoutButton.accessibilityIdentifier = "logoutButton"
        self.navigationItem.leftBarButtonItem = logoutButton
    }
    
...
