...
                                <constraint firstAttribute="width" constant="150" id="agM-sE-kPt"/>
                                <constraint firstAttribute="height" constant="70" id="reh-K1-ALx"/>
                            </constraints>
                        </view>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uM3-Zf-JTj" customClass="RoundedButton" customModule="pizzajeff" customModuleProvider="target">
                            <rect key="frame" x="224" y="260" width="130" height="40"/>
                            <accessibility key="accessibilityConfiguration" identifier="acceptButton"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="130" id="cpy-Z7-iZd"/>
                            </constraints>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="titleText" value="Lo quiero"/>
                                <userDefinedRuntimeAttribute type="number" keyPath="buttonStyle">
...
